Progressing with transition to Blazor from razor pages.  Client pages (view clients and create client) now fully functional using Balzorise.  These will act as templates for the other pages in the platform.  Changes have been made to some models and other areas of the platform to allow for better error checking and validation.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Client/Clients.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Client/Clients.razor
@@ -4,22 +4,26 @@
 @inject TokenProvider TokenProvider
 @using PanacheSoftware.Core.Domain.API.Client;
 
-<Breadcrumb>
-    <BreadcrumbItem>
-        <BreadcrumbLink To="dashboard">@LanguageHelper.GetTitle(langQueryList, 10121)</BreadcrumbLink>
-    </BreadcrumbItem>
-    <BreadcrumbItem Active="true">
-        <BreadcrumbLink>@LanguageHelper.GetTitle(langQueryList, 10105)</BreadcrumbLink>
-    </BreadcrumbItem>
-</Breadcrumb>
+<PageProgressBar @ref="@pageProgressBar" pageProgressColor="Color.Warning" pageProgressVisible="@loadingPage" />
 
-<Card Margin="Margin.Is4.OnY">
-    <CardHeader>
-        <CardTitle>@LanguageHelper.GetTitle(langQueryList, 10105)</CardTitle>
-    </CardHeader>
-    <CardBody>
-        @if (clientList != null)
-        {
+@if (!loadingPage)
+{
+    <Breadcrumb>
+        <BreadcrumbItem>
+            <BreadcrumbLink To="dashboard">@LanguageHelper.GetTitle(langQueryList, 10121)</BreadcrumbLink>
+        </BreadcrumbItem>
+        <BreadcrumbItem Active="true">
+            <BreadcrumbLink>@LanguageHelper.GetTitle(langQueryList, 10105)</BreadcrumbLink>
+        </BreadcrumbItem>
+    </Breadcrumb>
+
+    <Card Margin="Margin.Is4.OnY">
+        <CardHeader>
+            <CardTitle>@LanguageHelper.GetTitle(langQueryList, 10105)</CardTitle>
+        </CardHeader>
+        <CardBody>
+            @if (clientList != null)
+            {
             <DataGrid TItem="ClientHead"
                       Data="@clientList.ClientHeaders"
                       Filterable="true"
@@ -32,29 +36,42 @@
                       ShowPager="true"
                       PagerPosition="DataGridPagerPosition.Bottom"
                       ShowPageSizes="true">
-                <DataGridCommandColumn TItem="ClientHead" Width="170px" />
-                <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.ShortName)" Caption="@LanguageHelper.GetTitle(langQueryList, 10301)" />
-                <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.LongName)" Caption="@LanguageHelper.GetTitle(langQueryList, 10302)" />
-                <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.Description)" Caption="@LanguageHelper.GetTitle(langQueryList, 10200)" />
-                <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.Status)" Caption="@LanguageHelper.GetTitle(langQueryList, 10201)" />
-                <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.DateFrom)" Caption="@LanguageHelper.GetTitle(langQueryList, 10202)" DisplayFormat="{0:dd/MM/yyyy}" />
-                <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.DateTo)" Caption="@LanguageHelper.GetTitle(langQueryList, 10203)" DisplayFormat="{0:dd/MM/yyyy}" />
+                <EmptyTemplate>No records...</EmptyTemplate>
+                <DataGridColumns>
+                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.Id)" Caption="" Width="10px" Filterable="false" Sortable="false">
+                        <DisplayTemplate>
+                            <Button To="@($"client/{context.Id}")" Type="ButtonType.Link" Color="Color.Primary"><Icon Name="@("fa-edit")" /></Button>
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.ShortName)" Caption="@LanguageHelper.GetTitle(langQueryList, 10301)" />
+                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.LongName)" Caption="@LanguageHelper.GetTitle(langQueryList, 10302)" />
+                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.Description)" Caption="@LanguageHelper.GetTitle(langQueryList, 10200)" />
+                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.Status)" Caption="@LanguageHelper.GetTitle(langQueryList, 10201)" />
+                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.DateFrom)" Caption="@LanguageHelper.GetTitle(langQueryList, 10202)" DisplayFormat="{0:dd/MM/yyyy}" />
+                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.DateTo)" Caption="@LanguageHelper.GetTitle(langQueryList, 10203)" DisplayFormat="{0:dd/MM/yyyy}" />
+                </DataGridColumns>
             </DataGrid>
-        }
-        else
-        {
-            <p>Loading...</p>
-        }
-    </CardBody>
-</Card>
+            <Button To="client" Color="Color.Success" Type="ButtonType.Link">Create</Button>
+            }
+            else
+            {
+                <p>Loading...</p>
+            }
+        </CardBody>
+    </Card>
+}
 
 @code {
     LangQueryList langQueryList { get; set; }
     ClientList clientList { get; set; }
+    PageProgressBar pageProgressBar;
+    bool loadingPage = true;
 
     protected override async Task OnInitializedAsync()
     {
         await GetLanguageList();
+        loadingPage = false;
+        pageProgressBar.ChangeVisibility(loadingPage);
     }
 
     private async Task GetLanguageList()
