--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarDashboard.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarDashboard.razor
@@ -1,5 +1,5 @@
 ﻿<BarItem>
-    <BarLink To="">
+    <BarLink To="dashboard">
         <BarIcon IconName="IconName.Dashboard" />
         @LanguageHelper.GetTitle(langQueryList, 10104)
     </BarLink>
