--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
@@ -2,6 +2,7 @@
 @using Blazorise.Sidebar
 @using Blazorise.Icons
 @using Blazorise.DataGrid
+@using Blazorise.Components
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
@@ -14,9 +15,12 @@
 @using PanacheSoftware.UI.Client.Blazor.Shared
 @using PanacheSoftware.UI.Client.Blazor.Shared.Navigation
 @using PanacheSoftware.UI.Client.Blazor.Shared.Table
+@using PanacheSoftware.UI.Client.Blazor.Shared.Components
+@using PanacheSoftware.UI.Client.Blazor.Shared.ProgressBar
 @using PanacheSoftware.UI.Client.Blazor.Pages.Dashboard
 @using PanacheSoftware.UI.Client.Blazor.Pages.Client
 @using PanacheSoftware.UI.Client.Blazor.Pages.Team
+@using PanacheSoftware.UI.Client.Blazor.Shared.Header
 @using PanacheSoftware.Core.Domain.API.Language
 @using PanacheSoftware.UI.Client.Blazor.Helpers
 @using PanacheSoftware.UI.Client.Blazor.Data
@@ -24,3 +28,7 @@
 @using PanacheSoftware.Core.Types
 @using PanacheSoftware.Core.Domain.API
 @using PanacheSoftware.Core.Domain.UI.DataTable
+@using PanacheSoftware.Core.Domain.UI
+@using PanacheSoftware.UI.Core.Helpers
+@using Newtonsoft.Json
+@using System.Text
