Teams Creation, view and update in place.  Transition to Google Charts for Teams diagram, this will also be used for project plan on Task summary screen moving forward.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Client/Client.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Client/Client.razor
@@ -296,7 +296,7 @@
 
     private void StatusListValueChangedHandler(string newValue)
     {
-        //clientHead.Status = newValue;
+        clientHead.Status = newValue;
     }
 
     private async Task SubmitForm()
