--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarTeam.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarTeam.razor
@@ -8,7 +8,7 @@
             <BarDropdownItem To="team/teams">
                 @LanguageHelper.GetTitle(langQueryList, 10109)
             </BarDropdownItem>
-            <BarDropdownItem To="team/index">
+            <BarDropdownItem To="team/">
                 @LanguageHelper.GetTitle(langQueryList, 10110)
             </BarDropdownItem>
         </BarDropdownMenu>
