--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/_Host.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/_Host.cshtml
@@ -29,7 +29,7 @@
     <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
     <link href="_content/Blazorise.Sidebar/blazorise.sidebar.css" rel="stylesheet" />
     <link href="_content/Blazorise.DataGrid/blazorise.datagrid.css" rel="stylesheet" />
-
+    <link href="css/panache/pl-googlecharts.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -44,5 +44,8 @@
     <script src="_content/Blazorise.DataGrid/blazorise.datagrid.js"></script>
 
     <script src="_framework/blazor.server.js"></script>
+
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="js/panache/pl-googlecharts.js"></script>
 </body>
 </html>
