--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarClient.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarClient.razor
@@ -8,7 +8,7 @@
             <BarDropdownItem To="client/clients">
                 @LanguageHelper.GetTitle(langQueryList, 10106)
             </BarDropdownItem>
-            <BarDropdownItem To="client/client">
+            <BarDropdownItem To="client/">
                 @LanguageHelper.GetTitle(langQueryList, 10107)
             </BarDropdownItem>
         </BarDropdownMenu>
