--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Header/Header.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Header/Header.razor
@@ -1,12 +1,12 @@
-﻿<Bar Breakpoint="Breakpoint.Desktop" Background="Background.Primary" ThemeContrast="ThemeContrast.Light">
-    <BarBrand>
+﻿<Bar Breakpoint="Breakpoint.Desktop" Background="Background.Dark" ThemeContrast="ThemeContrast.Dark">
+    @*<BarBrand>
         <BarItem>
-            <BarLink To="" Style="color: white">
+            <BarLink To="" Style="color: #CBDB2A">
                 <BarIcon IconName="IconName.Dashboard"/>
                 Panache Legal
             </BarLink>
         </BarItem>
-    </BarBrand>
+    </BarBrand>*@
     <BarToggler />
     <BarMenu>
         <BarStart>
