--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarAdmin.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarAdmin.razor
@@ -1,4 +1,4 @@
-﻿<BarLabel>@LanguageHelper.GetTitle(langQueryList, 10114)</BarLabel>
+﻿<BarLabel Style="color: #FFFFFF">@LanguageHelper.GetTitle(langQueryList, 10114)</BarLabel>
 <SideBarUser />
 <SideBarSetting />
 
