--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarCustomField.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarCustomField.razor
@@ -5,10 +5,10 @@
             @LanguageHelper.GetTitle(langQueryList, 10124)
         </BarDropdownToggle>
         <BarDropdownMenu>
-            <BarDropdownItem To="taskgroup/taskgroups">
+            <BarDropdownItem To="customfieldgroup/customfieldgroups">
                 @LanguageHelper.GetTitle(langQueryList, 10125)
             </BarDropdownItem>
-            <BarDropdownItem To="taskgroup/createoredit">
+            <BarDropdownItem To="customfieldgroup/">
                 @LanguageHelper.GetTitle(langQueryList, 10126)
             </BarDropdownItem>
         </BarDropdownMenu>
