--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarGeneral.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarGeneral.razor
@@ -1,4 +1,4 @@
-﻿<BarLabel>@LanguageHelper.GetTitle(langQueryList, 10103)</BarLabel>
+﻿<BarLabel Style="color: #FFFFFF">@LanguageHelper.GetTitle(langQueryList, 10103)</BarLabel>
 <SideBarDashboard />
 <SideBarClient />
 <SideBarTeam />
