--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarSetting.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarSetting.razor
@@ -5,13 +5,13 @@
             @LanguageHelper.GetTitle(langQueryList, 10118)
         </BarDropdownToggle>
         <BarDropdownMenu>
-            <BarDropdownItem To="setting/systemsetting">
+            <BarDropdownItem To="systemsettings">
                 @LanguageHelper.GetTitle(langQueryList, 10123)
             </BarDropdownItem>
-            <BarDropdownItem To="setting/language">
+            <BarDropdownItem To="languages/">
                 @LanguageHelper.GetTitle(langQueryList, 10119)
             </BarDropdownItem>
-            <BarDropdownItem To="setting/usersetting">
+            <BarDropdownItem To="usersettings">
                 @LanguageHelper.GetTitle(langQueryList, 10122)
             </BarDropdownItem>
         </BarDropdownMenu>
