--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Client/Clients.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Client/Clients.razor
@@ -1,5 +1,6 @@
 ﻿@page "/client/clients"
 @attribute [Authorize]
+@inject UserAppCache UserAppCache
 @inject FoundationService MyFoundationService
 @inject TokenProvider TokenProvider
 @using PanacheSoftware.Core.Domain.API.Client;
@@ -24,34 +25,34 @@
         <CardBody>
             @if (clientList != null)
             {
-            <DataGrid TItem="ClientHead"
-                      Data="@clientList.ClientHeaders"
-                      Filterable="true"
-                      FilterMethod="DataGridFilterMethod.StartsWith"
-                      PageSize="25"
-                      Striped="true"
-                      Bordered="true"
-                      Hoverable="true"
-                      Responsive="true"
-                      ShowPager="true"
-                      PagerPosition="DataGridPagerPosition.Bottom"
-                      ShowPageSizes="true">
-                <EmptyTemplate>No records...</EmptyTemplate>
-                <DataGridColumns>
-                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.Id)" Caption="" Width="10px" Filterable="false" Sortable="false">
-                        <DisplayTemplate>
-                            <Button To="@($"client/{context.Id}")" Type="ButtonType.Link" Color="Color.Primary"><Icon Name="@("fa-edit")" /></Button>
-                        </DisplayTemplate>
-                    </DataGridColumn>
-                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.ShortName)" Caption="@LanguageHelper.GetTitle(langQueryList, 10301)" />
-                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.LongName)" Caption="@LanguageHelper.GetTitle(langQueryList, 10302)" />
-                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.Description)" Caption="@LanguageHelper.GetTitle(langQueryList, 10200)" />
-                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.Status)" Caption="@LanguageHelper.GetTitle(langQueryList, 10201)" />
-                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.DateFrom)" Caption="@LanguageHelper.GetTitle(langQueryList, 10202)" DisplayFormat="{0:dd/MM/yyyy}" />
-                    <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.DateTo)" Caption="@LanguageHelper.GetTitle(langQueryList, 10203)" DisplayFormat="{0:dd/MM/yyyy}" />
-                </DataGridColumns>
-            </DataGrid>
-            <Button To="client" Color="Color.Success" Type="ButtonType.Link">Create</Button>
+                <DataGrid TItem="ClientHead"
+                          Data="@clientList.ClientHeaders"
+                          Filterable="true"
+                          FilterMethod="DataGridFilterMethod.StartsWith"
+                          PageSize="25"
+                          Striped="true"
+                          Bordered="true"
+                          Hoverable="true"
+                          Responsive="true"
+                          ShowPager="true"
+                          PagerPosition="DataGridPagerPosition.Bottom"
+                          ShowPageSizes="true">
+                    <EmptyTemplate>No records...</EmptyTemplate>
+                    <DataGridColumns>
+                        <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.Id)" Caption="" Width="10px" Filterable="false" Sortable="false">
+                            <DisplayTemplate>
+                                <Button To="@($"client/{context.Id}")" Type="ButtonType.Link" Color="Color.Primary"><Icon Name="@("fa-edit")" /></Button>
+                            </DisplayTemplate>
+                        </DataGridColumn>
+                        <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.ShortName)" Caption="@LanguageHelper.GetTitle(langQueryList, 10301)" />
+                        <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.LongName)" Caption="@LanguageHelper.GetTitle(langQueryList, 10302)" />
+                        <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.Description)" Caption="@LanguageHelper.GetTitle(langQueryList, 10200)" />
+                        <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.Status)" Caption="@LanguageHelper.GetTitle(langQueryList, 10201)" />
+                        <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.DateFrom)" Caption="@LanguageHelper.GetTitle(langQueryList, 10202)" DisplayFormat="{0:dd/MM/yyyy}" />
+                        <DataGridColumn TItem="ClientHead" Field="@nameof(ClientHead.DateTo)" Caption="@LanguageHelper.GetTitle(langQueryList, 10203)" DisplayFormat="{0:dd/MM/yyyy}" />
+                    </DataGridColumns>
+                </DataGrid>
+                <Button To="client" Color="Color.Success" Type="ButtonType.Link">@LanguageHelper.GetTitle(langQueryList, 10204)</Button>
             }
             else
             {
@@ -70,6 +71,7 @@
     protected override async Task OnInitializedAsync()
     {
         await GetLanguageList();
+        await GetClients();
         loadingPage = false;
         pageProgressBar.ChangeVisibility(loadingPage);
     }
@@ -87,9 +89,7 @@
         textCodes.Add(10203);
         textCodes.Add(10204);
 
-        langQueryList = await MyFoundationService.GetLanguageInfo(TokenProvider.AccessToken, textCodes.ToArray());
-
-        await GetClients();
+        langQueryList = await MyFoundationService.GetLanguageInfo(TokenProvider.AccessToken, UserAppCache.LanguageCode, textCodes.ToArray());
     }
 
     private async Task GetClients()
