--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarUnAuthorized.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarUnAuthorized.razor
@@ -2,7 +2,7 @@
     <BarItem>
         <BarLink To="">
             <BarIcon IconName="customIcon" />
-            Panache Legal
+            @*Panache Legal*@
         </BarLink>
     </BarItem>
 </BarBrand>
@@ -13,7 +13,8 @@
     </BarStart>
 </BarMenu>
 @code{
-    RenderFragment customIcon =@<img src="/img/user.jpg" style="width:32px; height: 32px" />;
+    //RenderFragment customIcon =@<img src="/img/user.jpg" style="width:32px; height: 32px" />;
+    RenderFragment customIcon =@<img src="/img/PS-Green-Trans.png" style="width:42px; height: 42px" />;
 }
 
 
