--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarUser.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarUser.razor
@@ -8,7 +8,7 @@
             <BarDropdownItem To="user/users">
                 @LanguageHelper.GetTitle(langQueryList, 10116)
             </BarDropdownItem>
-            <BarDropdownItem To="user/index">
+            <BarDropdownItem To="user/">
                 @LanguageHelper.GetTitle(langQueryList, 10117)
             </BarDropdownItem>
         </BarDropdownMenu>
