--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
@@ -20,6 +20,9 @@
 @using PanacheSoftware.UI.Client.Blazor.Pages.Dashboard
 @using PanacheSoftware.UI.Client.Blazor.Pages.Client
 @using PanacheSoftware.UI.Client.Blazor.Pages.Team
+@using PanacheSoftware.UI.Client.Blazor.Pages.CustomFieldGroup
+@using PanacheSoftware.UI.Client.Blazor.Pages.Setting
+@using PanacheSoftware.UI.Client.Blazor.Pages.User
 @using PanacheSoftware.UI.Client.Blazor.Shared.Header
 @using PanacheSoftware.Core.Domain.API.Language
 @using PanacheSoftware.UI.Client.Blazor.Helpers
